project cards added

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,27 +1,2 @@
-<link rel="stylesheet" href="assets/css/projects.css">
-<div class="grid">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
+<div class="grid projects"></div>
+<script src="assets/js/projects.js"></script>
