--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,9 +1,7 @@
 <link rel="stylesheet" href="assets/css/skills.css">
 <div>
-    Skills
-    <hr>
     <div class="grid">
-        <div>
+        <div class="skills-card">
             Skills
             <ul class="skills">
                 <li>Javascript</li>
@@ -15,7 +13,7 @@
                 <li>GIT</li>
             </ul>
         </div>
-        <div>
+        <div class="skills-card">
             Framework
             <ul class="skills">
                 <li>Angular</li>
@@ -23,7 +21,7 @@
                 <li>Bootstrap</li>
             </ul>
         </div>
-        <div>
+        <div class="skills-card">
             Libraries
             <ul class="skills">
                 <li>JQuery / AJAX</li>
