--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/projects.css">
     <link rel="stylesheet" href="assets/css/grid.css">
     <link rel="stylesheet" href="assets/css/skills.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -26,7 +28,11 @@
             </ul>
         </div>
         <div class="main scroll">
+            <div id="menu" onclick="displayMenu()">
+                <span class="material-symbols-outlined">arrow_right</span>
+            </div>
             <div class="title">Home</div>
+
             <div class="content">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita ipsa explicabo
                 eveniet soluta. Cum earum consequatur nobis quis tempora. Iure a quod voluptates vel amet, libero
