Too many changes

--- a/index.html
+++ b/index.html
@@ -20,22 +20,32 @@
             <div class="photo">
                 <img class="me" src="assets/img/1653664707943.jfif" alt="">
             </div>
+            <div class="contact">
+                <section>
+                    <h5>Phone</h5>
+                    <a href="tel:+52 4381111026">+52 4381111026</a>
+                </section>
+                <section>
+                    <h5>Email</h5>
+                    <a href="mailto:agexandro@gmail.com">agexandro@gmail.com</a>
+                </section>
+            </div>
             <ul class="links">
                 <li><a onclick="showPage('pages/projects.html','Projects')">Projects</a></li>
                 <li><a onclick="showPage('pages/skills.html','Skills')">Skills</a></li>
-                <li><a onclick="showPage('pages/contact.html','Education')">Education</a></li>
-                <li><a onclick="showPage('pages/contact.html','Contact')">Contact</a></li>
+                <li><a onclick="showPage('pages/education.html','Education')">Education</a></li>
             </ul>
         </div>
         <div class="main scroll">
             <div id="menu" onclick="displayMenu()">
-                <span class="material-symbols-outlined">arrow_right</span>
             </div>
-            <div class="title">Home</div>
+            <div class="title" style="box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25)">Home</div>
 
-            <div class="content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita ipsa explicabo
-                eveniet soluta. Cum earum consequatur nobis quis tempora. Iure a quod voluptates vel amet, libero
+            <div style="background-color: white; height: max-content">
+                <div class="content">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita ipsa explicabo
+                    eveniet soluta. Cum earum consequatur nobis quis tempora. Iure a quod voluptates vel amet, libero
+                </div>
             </div>
         </div>
     </main>
